@@ -10,6 +10,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2496403 [display] Multi-row change with "]",
   thanks to Virsacer - virsacer
 - bug #2027720 [parser] Missing space after BINARY used as cast 
+- patch #2520747 [core] E_DEPRECATED compatibility for PHP 5.3,
+  thanks to Giovanni Giacobbi - themnemonic
 
 3.1.2.0 (2009-01-19)
 - bug #1253252 [display] Can't NULL a column with relation defined 
